2002-04-27  Seth Nickell  <snickell@stanford.edu>

	* font-properties.desktop.in:

	Tweak categories and comment a little.
	
	* font-properties.glade:

	Change labels to be a little more descriptive,
	force dialogue to be a little larger.

2002-04-26  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* font-properties.glade:
	* main.c: (create_dialog), (setup_dialog), (main):

	Bring back in sync with the merged theme/font dialog.
	
Wed Apr 10 18:03:00 2002  Jonathan Blandford  <jrb@gnome.org>

	* font-properties.desktop.in (Exec): s/gnome2/gnome

2002-03-27  Lauris Kaplinski  <lauris@ximian.com>

	* main.c (response_cb): No responses here
	(font_capplet_custom_toggled): New signal handler
	(font_capplet_font_set): Ditto
	(font_capplet_value_notify): Ditto
	(setup_dialog): Removed peditor stuff, as I do not know, how to
	mix it with NULL == unset, string == set
	(main): Get GConfClient and activate directory

	* font-properties.glade: Reverted to original version,
	added label telling about applying

2002-03-17  Jonathan Blandford  <jrb@redhat.com>

	* font-properties.glade:
	* main.c: (setup_dialog):

2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>

	* main.c: s/PACKAGE/GETTEXT_PACKAGE/g
	
2002-02-18  Gediminas Paulauskas <menesis@delfi.lt>

	* ChangeLog: added
	* main.c: correct i18n
